--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test-unit": "vitest",
     "test-e2e": "playwright test",
     "test-ci": "vitest run --coverage & playwright test",
-    "sync-collaborateurs-startups": "node --env-file=.env.local -r ts-node/register src/bin/syncCollaborateursStartups.ts"
+    "sync-collaborateurs-startups": "tsx src/bin/syncCollaborateursStartups.ts"
   },
   "dependencies": {
     "@codegouvfr/react-dsfr": "^1.14.5",
@@ -30,12 +30,14 @@
     "@socialgouv/matomo-next": "^1.9.2",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
     "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "ts-node": "^10.9.2",
-    "tss-react": "^4.9.13"
+    "tss-react": "^4.9.13",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
