fix(layout): display right ANCT logo

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "@sentry/profiling-node": "^8.38.0",
     "@socialgouv/matomo-next": "^1.9.2",
     "@testing-library/user-event": "^14.5.2",
-    "axios": "~1.7.7",
-    "axios-cache-interceptor": "^1.6.2",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
     "next": "^15.0.3",
