--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "next lint",
     "test-unit": "vitest",
     "test-e2e": "playwright test",
-    "test-ci": "vitest run --coverage & playwright test",
+    "test-ci": "vitest run --coverage && playwright test",
     "sync-collaborateurs-startups": "tsx src/application/bin/syncCollaborateursStartups.ts"
   },
   "dependencies": {
