--- a/package.json
+++ b/package.json
@@ -20,45 +20,47 @@
     "sync-collaborateurs-startups": "tsx src/application/bin/syncCollaborateursStartups.ts"
   },
   "dependencies": {
-    "@codegouvfr/react-dsfr": "^1.14.5",
-    "@emotion/react": "^11.13.3",
+    "@codegouvfr/react-dsfr": "^1.27.0",
+    "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.7",
-    "@sentry/nextjs": "^8.38.0",
-    "@sentry/profiling-node": "^8.38.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
+    "@sentry/nextjs": "^10.14.0",
+    "@sentry/profiling-node": "^10.14.0",
     "@socialgouv/matomo-next": "^1.9.2",
-    "@testing-library/user-event": "^14.5.2",
-    "axios": "^1.7.7",
-    "dotenv": "^16.4.7",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@testing-library/user-event": "^14.6.1",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.2",
     "lodash": "^4.17.21",
-    "next": "^15.0.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.5.3",
+    "react": "^19",
+    "react-dom": "^19",
     "ts-node": "^10.9.2",
-    "tss-react": "^4.9.13",
-    "tsx": "^4.19.2"
+    "tss-react": "^4.9.19",
+    "tsx": "^4.20.5"
   },
   "devDependencies": {
-    "@playwright/test": "^1.48.2",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.0.1",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^22",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "@vitest/coverage-istanbul": "^2.1.5",
-    "commit-and-tag-version": "^12.5.0",
+    "@playwright/test": "^1.55.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.3",
+    "@vitest/coverage-istanbul": "^3.2.4",
+    "commit-and-tag-version": "^12.6.0",
     "eslint": "^9",
-    "eslint-config-next": "^15.0.3",
-    "jsdom": "^25.0.1",
+    "eslint-config-next": "^15.5.3",
+    "jsdom": "^27.0.0",
     "postcss": "^8",
-    "sass": "^1.80.7",
-    "tailwindcss": "^3.4.14",
+    "sass": "^1.93.1",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5",
-    "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^2.1.5",
-    "vitest-mock-extended": "^2.0.2"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4",
+    "vitest-mock-extended": "^3.1.0"
   }
 }
