--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,11 @@ variables:
   GRIST_DOC_ID: 1234
   GRIST_URL: https://test.com
   GRIST_API_KEY: 1234
+  # Sentry source maps upload configuration
+  SENTRY_AUTH_TOKEN: ${SENTRY_AUTH_TOKEN}
+  SENTRY_ORG: ${SENTRY_ORG}
+  SENTRY_PROJECT: ${SENTRY_PROJECT}
+  SENTRY_URL: ${SENTRY_URL}
 
 default:
   image: node:22-alpine
